--- a/ScatterX.vcxproj
+++ b/ScatterX.vcxproj
@@ -186,7 +186,9 @@
   <ItemGroup>
     <ClCompile Include="Core\App.cpp" />
     <ClCompile Include="Core\Camera.cpp" />
+    <ClCompile Include="Core\InputManager.cpp" />
     <ClCompile Include="Core\Mesh.cpp" />
+    <ClCompile Include="Core\PickingTexture.cpp" />
     <ClCompile Include="Core\Renderer.cpp" />
     <ClCompile Include="Core\ShaderClass.cpp" />
     <ClCompile Include="glad.c" />
@@ -205,7 +207,9 @@
   <ItemGroup>
     <ClInclude Include="Core\App.h" />
     <ClInclude Include="Core\Camera.h" />
+    <ClInclude Include="Core\InputManager.h" />
     <ClInclude Include="Core\Mesh.h" />
+    <ClInclude Include="Core\PickingTexture.h" />
     <ClInclude Include="Core\rapidobj.hpp" />
     <ClInclude Include="Core\Renderer.h" />
     <ClInclude Include="Core\ShaderClass.h" />
@@ -222,6 +226,8 @@
   <ItemGroup>
     <None Include="Shaders\default.frag" />
     <None Include="Shaders\default.vert" />
+    <None Include="Shaders\picking.frag" />
+    <None Include="Shaders\picking.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
